# autolock

./: .gitignore  .gitmodules  AWS-README.md  README.md  aws-setup-after-ami.sh  issue.md
benchmarks/patches/libmemcached-1.0.18/: 0001-fixup-compiler-error.patch  0002-fix-getaddrinfo-fields.patch
benchmarks/results/micro/: README.md  metal-r0.csv  r0.csv  r1.csv
benchmarks/scripts/: plotdata.py  readme.md  run-micro.py  setup-benchmarks.py
bib/: summaries.md  to-look-at.noah.txt
glibc-dev/: .gitignore
glibc-dev/patches/: v1-0001-Make-pthread_cond_var-lock-usage-go-through-PLT-f.patch
glibc-dev/scripts/: use-this-glibc.py
linux-dev/config/: example-config
linux-dev/patches/: v1-0001-autolock-Add-syscall-build-and-task_struct-suppor.patch  v1-0002-Implement-autolock.patch  v1-0003-Scheduler-Integration-Start-Needs-some-edge-cases.patch  v1-0004-Fixup-failed-scheduler-cleanup.patch  v1-0005-Disable-verbosity.patch  v1-0006-Factor-stats-collection-out-to-autolock-verbose-a.patch  v1-0007-Make-autolock-printouts-more-useful-for-debugging.patch  v1-0008-Fix-bug-where-clone-on-thread-with-initialized-au.patch  v1-0009-Disable-automatic-disarming-of-autolock.-Its-unne.patch  v1-0010-With-pinning-pages.patch  v1-0011-Add-stats-syscalls.patch  v1-0012-Fixup-stats-and-improve-scheduler.patch
linux-dev/scripts/: qemu-script.sh
user-dev/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  driver
user-dev/scripts/: gen-apply-macro.py  gen-percentiles-map.py  precommit-tests.py
user-dev/src/: driver.c
user-dev/src/arch/: inl-asm.h  ll-getcpu.h  ll-intrin.h  ll-pause.h  ll-prefetch.h  ll-syscall.h  ll-timing.h  ll-tls.h
user-dev/src/arch/x86/: x86-getcpu.h  x86-pause.h  x86-prefetch.h  x86-syscall.h  x86-timing.h  x86-tls.h
user-dev/src/asm/: asm-common.h  libc-asm-common.h  nops.h
user-dev/src/asm/libc-defs/: libc-avx-vecs.h  libc-avx2-vecs.h  libc-avx512-vecs.h  libc-evex-vecs.h  libc-sse2-vecs.h
user-dev/src/autolock-impls/: autolock-abi.h  autolock-api.h  autolock-export.h  autolock-kernel-abi.h  autolock-kernel-api.h  backoff-autolock.h  kernel-autolock.c  rseq-autolock.h  simple-autolock.h  ticket-autolock.h
user-dev/src/autolock-impls/builtin-alloc/: allocator.h
user-dev/src/autolock-impls/common/: autolock-returns.h
user-dev/src/autolock-impls/internal/: autolock-common-consts.h  autolock-common-returns.h  autolock-common-user-api.h  autolock-macro-helpers.h  test.c
user-dev/src/autolock-impls/locks/: aepfl-autolock.h  aepfl-normlock.h  backoff-autolock.h  clh-autolock.h  clh-normlock.h  cptltkt-autolock.h  cptltkt-normlock.h  custom-backoff-autolock.h  custom-spin-autolock.h  mcs-autolock.h  mcs-normlock.h  rseq-autolock.h  simple-autolock.h  simple-ticket-autolock.h  simple-ticket-normlock.h  spin-comparisons.h  ticket-autolock.h
user-dev/src/autolock-impls/locks/internal/: aepfl-lock-base.h  autolock-common-user-api.h  cbmocs-lock-base.h  clh-lock-base-hypothesis.h  clh-lock-base.h  cptltkt-lock-base.h  lock-base.h  lock-wait-common.h  mcs-lock-base.h  simple-ticket-lock-base.h
user-dev/src/autolock-impls/stats/: autolock-stats.c  autolock-stats.h
user-dev/src/autolock-impls/sys/: autolock-kernel-api.h  kernel-autolock.c
user-dev/src/bench/: bench-common.h  bench-decls.h  bench-driver.c  bench-generator.h  benchmarks.c  benchmarks.h
user-dev/src/interpose/: bad-interpose-timing.h  interpose-timing.h  pthread-mutex-api.h  pthread-mutex-interpose.h
user-dev/src/interpose/mutex-libs/: backoff-autolock.interpose.c  custom-backoff-autolock.interpose.c  pthread-mutex.interpose.c  pthread-spin.interpose.c
user-dev/src/lib/: alloc-custom.h  commonlib.h  string-custom.h
user-dev/src/lib/algo/: sort.h  sort.test.c
user-dev/src/lib/stats/: stats.c  stats.h  stats.test.c
user-dev/src/locks/: lock-base.h  lock-bench.h  lock-decls.c  lock-export.h  lock-gen-macros.h  lock-run-params.h  lock-runner.c  lock-runner.h
user-dev/src/pthread/: pthread-cond-var-api.h  pthread-mutex-api.h  pthread-rwlock-api.h
user-dev/src/test/: test-common.c  test-common.h  test-decls.h  test-driver.c  tests.c  tests.h
user-dev/src/thread/: barrier.h  cpuset.c  cpuset.h  mutex.h  spinlock.h  thread-common.h  thread.h  tls.h
user-dev/src/thread/internal/: thread-internal-common.h
user-dev/src/thread/rseq/: rseq-arch.h  rseq-area.c  rseq-defs.h  rseq-glibc-support.h  rseq-kernel-abi.h  rseq-linux-support.h  rseq-portable.h  rseq.h  rseq.test.c
user-dev/src/thread/rseq/x86/: x86-rseq-arch.h  x86-rseq-asm-defs.h  x86-rseq-signature.h
user-dev/src/util/: arg.c  arg.h  attrs.h  common.h  cpu-info.c  cpu-info.h  error-util.c  error-util.h  file-util.c  file-util.h  func-decl-generator.h  func-decl-types.h  func-decl-utils.c  func-decl-utils.h  getcpu-portable.h  inline-math.bench.c  inline-math.h  inline-math.test.c  macro.h  memory-util.c  memory-util.h  portability.h  random.bench.c  random.c  random.h  random.test.c  regex-util.c  regex-util.h  sched-util.c  sched-util.h  time-util.c  time-util.h  timers.bench.c  timers.h  types.h  types.test.c  vdso-arch-masks.h  vdso-func-enum.h  vdso-util.c  vdso-util.h  (+3 more)
user-dev/src/util/internal/: timers.h
user-dev/src/util/topology/: 8-conf.h  96-conf.h  unk-conf.h
